--- a/ValidationBox/ValidationBox.csproj
+++ b/ValidationBox/ValidationBox.csproj
@@ -48,6 +48,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="FirstErrorForElementMultiValueConverter.cs" />
     <Compile Include="FirstErrorOrDefaultConverter.cs" />
     <Compile Include="LessThanValidationRule.cs" />
     <Compile Include="CanParseIntValidationRule.cs" />
