--- a/ValidationBox/ValidationBox.csproj
+++ b/ValidationBox/ValidationBox.csproj
@@ -48,9 +48,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ErrorContentConverter.cs" />
     <Compile Include="FirstErrorForElementMultiValueConverter.cs" />
     <Compile Include="FirstErrorOrDefaultConverter.cs" />
-    <Compile Include="FirstValidationErrorMessage.cs" />
+    <Compile Include="FirstValidationErrorForExtension.cs" />
     <Compile Include="LessThanValidationRule.cs" />
     <Compile Include="CanParseIntValidationRule.cs" />
     <Compile Include="ViewModel.cs" />
